# Bakaneko

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  NOTICES.md  README.md
assets/: me.link1j.bakaneko.appdata.xml  me.link1j.bakaneko.desktop  me.link1j.server_manager.appdata.xml  me.link1j.server_manager.desktop  qtquickcontrols2.conf
assets/android/: AndroidManifest.xml
extras/: bakaneko-server.ini  bakaneko-server.openrc  bakaneko-server.service
scripts/: APKBUILD.client  APKBUILD.server  DOCKERFILE-android  Dockerfile.android  Dockerfile.appimage  PKGBUILD.client  PKGBUILD.client-git  PKGBUILD.server  PKGBUILD.server-git  build_android.sh  build_android_docker.sh  build_appimage_docker.sh  cp-with-prefix.sh  create-apk.sh
src/: CMakeLists.txt  main.cpp  qml.qrc  resources.qrc
src/client/: CMakeLists.txt  bakaneko-client.notifyrc  main.cpp  notifications.qrc  qml.qrc  resources.qrc
src/client/managers/: appinfo.cpp  appinfo.h  servermanager.cpp  servermanager.h  settings.h  terminfo.h
src/client/models/: adaptermodel.cpp  adaptermodel.h  drivesmodel.cpp  drivesmodel.h  services.cpp  services.h  termlist.cpp  updatemodel.cpp  updatemodel.h
src/client/objects/: drives.cpp  logindata.cpp  logindata.h  server.cpp  server.h  update.cpp  update.h
src/client/objects/servers/: linux.h  windows.cpp
src/client/term/: pty.cpp  pty.h  screen.cpp  screen.h  term.cpp
src/client/term/terms/: dumb.cpp  linux.cpp  null.cpp
src/client/ui/: main.qml
src/client/ui/Bakaneko/Components/: Adapters.qml  ColumnBlock.qml  Drives.qml  ServerInfo.qml  ServerListItem.qml  Services.qml  Table.qml  Updates.qml  qmldir
src/client/ui/Bakaneko/Dialogs/: AddServerDialog.qml  Login.qml  ServerSettings.qml  qmldir
src/client/ui/Bakaneko/Pages/: ServerListPage.qml  ServerPage.qml  Settings.qml  Term.qml
src/common/: base64.hpp  ini.hpp  windows.hpp
src/commun/: CMakeLists.txt  http.cpp  http.hpp
src/managers/: appinfo.cpp  appinfo.h  servermanager.cpp  servermanager.h  settings.cpp  settings.h  terminfo.cpp  terminfo.h
src/models/: serverlistmodel.cpp  serverlistmodel.h  termlist.h  updatemodel.cpp  updatemodel.h
src/objects/: drives.h  server.cpp  server.h
src/objects/servers/: linux.cpp  linux.h  windows.cpp  windows.h
src/protobuf/: CMakeLists.txt  drives.hpp  drives.proto  dummy.cpp  network.hpp  network.proto  server.hpp  server.proto  services.hpp  services.proto  updates.hpp  updates.proto
src/server/: CMakeLists.txt  REST.h  drives.cpp  drives.hpp  http.cpp  http.hpp  info.cpp  info.hpp  main.cpp  network.cpp  openrc.cpp  openrc.hpp  rest.cpp  rest.hpp  services.cpp  system.cpp  updates.cpp  windows_service.cpp
src/term/: pty.cpp  pty.h  screen.cpp  screen.h  term.cpp  term.h
src/term/terms/: dumb.cpp  dumb.h  linux.cpp  linux.h  null.h
src/ui/: main.qml
src/ui/Bakaneko/Components/: ColumnBlock.qml  Drives.qml  ServerListItem.qml  Updates.qml  qmldir
src/ui/Bakaneko/Dialogs/: AddServerDialog.qml  qmldir
src/ui/Bakaneko/Pages/: ServerListPage.qml  ServerPage.qml  Settings.qml  Term.qml  qmldir
src/ui/ServerManager/Components/: ServerListItem.qml  qmldir
src/ui/ServerManager/Dialogs/: AddServerDialog.qml  qmldir
src/ui/ServerManager/Pages/: ServerListPage.qml  ServerPage.qml  qmldir
